--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -290,12 +290,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #858585;
+  color: #57d175;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #57d175;
+  color: #858585;
   text-decoration: underline;
 }
 a:focus {
@@ -753,7 +753,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1160px;
+    width: 1170px;
   }
 }
 .container-fluid {
@@ -2284,7 +2284,7 @@ fieldset[disabled] .btn-info.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #858585;
+  color: #57d175;
   font-weight: normal;
   cursor: pointer;
   border-radius: 0;
@@ -2305,7 +2305,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #57d175;
+  color: #858585;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -2861,7 +2861,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: transparent;
-  border-color: #858585;
+  border-color: #57d175;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3523,7 +3523,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #858585;
+  color: #57d175;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -3543,7 +3543,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #57d175;
+  color: #858585;
   background-color: #f5f5f5;
   border-color: #dddddd;
 }
@@ -3738,7 +3738,7 @@ a.badge:focus {
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #858585;
+  color: #57d175;
   background-color: #ffffff;
 }
 .nav-pills > li > a > .badge {
@@ -3798,7 +3798,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #858585;
+  border-color: #57d175;
 }
 .thumbnail .caption {
   padding: 9px;
