0808 changed titles and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11421,7 +11421,7 @@ a.bd-backtotop-1:hover {
   display: none;
 }
 .bd-layoutcontainer-6 > .bd-container-inner > .container-fluid > .row {
-  margin-top: -1em;
+  margin-top: -2.56em;
   margin-bottom: -1em;
   height: calc(100% + 2em);
 }
@@ -12323,6 +12323,8 @@ h2.bd-postheader-4 a {
   background-color: #858585;
   padding-top: 4em;
   padding-bottom: 4em;
+  margin-top: 0px;
+  margin-bottom: -33px;
 }
 .bd-section-2 {
   line-height: 27.2px;
@@ -12814,6 +12816,9 @@ h2.bd-textblock-31 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM5 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ {}
+h2.bd-textblock-4 {
+  color: #ffffff;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQw {}
 .bd-textblock-40 {
@@ -12922,7 +12927,7 @@ h1.bd-textblock-60 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY5 {}
 .bd-textblock-69 {
   margin-top: 23px;
-  height: 135px;
+  height: 127px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazcw {}
@@ -12930,7 +12935,7 @@ h1.bd-textblock-60 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazcz {}
 .bd-textblock-73 {
   margin-top: 23px;
-  height: 133px;
+  height: 125px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazcz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc0 {}
