--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ h2 {
   line-height: 25.71428572px;
   text-decoration: none;
   font-size: 18px;
-  color: #57d175;
+  color: #b3b3b3;
 }
 h2 a:hover {
   text-decoration: none;
@@ -12929,7 +12929,7 @@ h1.bd-textblock-60 {
 }
 @media (max-width: 767px) {
   .bd-textblock-62 {
-    height: 528px;
+    height: 521px;
   }
 }
 .bd-textblock-62 {
