Contact form redone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10974,6 +10974,17 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWNvbW1lbnR0ZXh0NA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxMA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxMA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxNA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw0 {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw1 {}
+@media (max-width: 767px) {
+  .bd-customhtml-5 {
+    margin-top: 10px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw2 {}
 @media (max-width: 767px) {
   .bd-customhtml-6 {
@@ -10981,10 +10992,45 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw2 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw4 {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw4 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw5 {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWZvb3RlcmFyZWEx {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWZvb3RlcmFyZWEx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWZvcm0z {}
+.bd-form-3 {
+  min-height: 100px;
+  margin-bottom: 6px;
+}
+@media (max-width: 991px) {
+  .bd-form-3 {
+    margin-top: 0px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-form-3 {
+    margin-top: 0px;
+    margin-bottom: 8px;
+  }
+}
+.bd-form-3 .bd-form-input {
+  -webkit-box-shadow: none;
+  -o-box-shadow: none;
+  -ms-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background-color: #ffffff;
+  border-radius: 0px;
+}
+.bd-form-3 .bd-form-label {
+  font-weight: normal;
+}
+.bd-form-3 .bd-form-checkbox-label {
+  font-weight: normal;
+}
+.bd-form-3 .bd-form-radiobutton-label {
+  font-weight: normal;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWZvcm0z {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWZvcm04 {}
 .bd-form-8 {
   min-height: 100px;
@@ -11024,10 +11070,10 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWhlYWRlcmFyZWEx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mg {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mg {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mw {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NQ {}
@@ -11195,12 +11241,18 @@ a.bd-backtotop-1:hover {
   background-size: cover;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWltYWdlbGluazk {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0MTA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0MTA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0Mg {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0Mg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0NQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0NQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0Nw {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0Nw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0OA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0OA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0OQ {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWlucHV0OQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE {}
 .bd-layoutbox-1 {
   overflow: hidden;
@@ -11254,11 +11306,6 @@ a.bd-backtotop-1:hover {
   border-bottom: 1px solid #dddddd;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDEz {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE1 {}
-.bd-layoutbox-15 {
-  margin-bottom: 42px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE3 {}
 .bd-layoutbox-17 {
   background-color: #f5f5f5;
@@ -11295,11 +11342,27 @@ a.bd-backtotop-1:hover {
   border-bottom: 1px solid #dddddd;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIy {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIz {}
+.bd-layoutbox-23 {
+  margin-bottom: -21px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI0 {}
 .bd-layoutbox-24 {
   margin-bottom: -21px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI1 {}
+.bd-layoutbox-25 {
+  margin-bottom: 76px;
+}
+@media (max-width: 767px) {
+  .bd-layoutbox-25 {
+    height: 176px;
+    margin-bottom: 0px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI2 {}
 .bd-layoutbox-26 h1 {
   text-align: center;
@@ -11341,6 +11404,11 @@ a.bd-backtotop-1:hover {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc {}
 .bd-layoutbox-7 {
   margin-top: 0px;
+}
+@media (max-width: 991px) {
+  .bd-layoutbox-7 {
+    height: 866px;
+  }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDg {}
@@ -11430,18 +11498,29 @@ a.bd-backtotop-1:hover {
   border: 1px solid #dddddd;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjEz {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjIw {}
-.bd-layoutcontainer-20 {
-  margin-top: 89px;
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjE0 {}
+.bd-layoutcontainer-14 > .bd-container-inner > .container-fluid:after {
+  display: none;
 }
-.bd-layoutcontainer-20 > .bd-container-inner > .container-fluid {
+.bd-layoutcontainer-14 > .bd-container-inner > .container-fluid > .row {
+  margin-bottom: 45px;
+}
+@media (max-width: 767px) {
+  .bd-layoutcontainer-14 > .bd-container-inner > .container-fluid > .row {
+    margin-top: 0px;
+  }
+}
+.bd-layoutcontainer-14 > .bd-container-inner > .container-fluid {
   padding-left: 0;
   padding-right: 0;
 }
-.bd-layoutcolumn-88 {
-  margin-top: 0px;
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjE0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjE2 {}
+.bd-layoutcontainer-16 > .bd-container-inner > .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
 }
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjIw {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjE2 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjI1 {}
 .bd-layoutcontainer-25 {
   margin-top: 64px;
@@ -11970,6 +12049,12 @@ a.bd-backtotop-1:hover {
   margin-top: 12px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24z {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b241 {}
+.bd-linkbutton-5 {
+  width: 100%;
+  margin-top: 12px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b241 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxvZ28y {}
 .bd-logo-2 {
   float: left;
@@ -12344,6 +12429,8 @@ h2.bd-postheader-4 a {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXBvc3RyZWFkbW9yZTY {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXJhZGlvYnV0dG9uMg {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXJhZGlvYnV0dG9uMg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXJhZGlvYnV0dG9uNA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXJhZGlvYnV0dG9uNA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24x {}
 .bd-section-1 {
   background-color: #ffffff;
@@ -12430,10 +12517,51 @@ h2.bd-postheader-4 a {
   position: relative;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24x {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMA {}
+.bd-section-10 {
+  height: 565px;
+  margin-bottom: 22px;
+}
+@media (max-width: 767px) {
+  .bd-section-10 {
+    margin-bottom: 19px;
+    height: 542px;
+    margin-top: 1px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMQ {}
+.bd-section-11 {
+  height: 172px;
+}
+@media (max-width: 991px) {
+  .bd-section-11 {
+    height: 176px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-section-11 {
+    margin-bottom: 1px;
+    height: 250px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xNQ {}
 .bd-section-15 {
-  height: 553px;
+  height: 866px;
   margin-bottom: 6px;
+}
+@media (max-width: 991px) {
+  .bd-section-15 {
+    margin-bottom: 0px;
+    height: 1000px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-section-15 {
+    margin-bottom: 1px;
+    height: 1900px;
+  }
 }
 .bd-section-15 {
   color: #57d175;
@@ -12477,9 +12605,17 @@ h2.bd-postheader-4 a {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24y {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNA {}
+@media (max-width: 991px) {
+  .bd-section-24 {
+    margin-top: 0px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-section-24 {
+    margin-top: 1px;
+  }
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNA {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNw {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb240 {}
 .bd-section-4 {
   background-color: #ffffff;
@@ -12682,6 +12818,12 @@ h2.bd-postheader-4 a {
   visibility: inherit;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNvY2lhbGljb25zMg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEw {}
+.bd-spacer-10 {
+  height: 32px;
+  margin-bottom: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEx {}
 .bd-spacer-11 {
   height: 1em;
@@ -12717,6 +12859,12 @@ h2.bd-postheader-4 a {
   height: 1em;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE3 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE4 {}
+.bd-spacer-18 {
+  height: 32px;
+  margin-bottom: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE5 {}
 .bd-spacer-19 {
   height: 1em;
@@ -12732,6 +12880,18 @@ h2.bd-postheader-4 a {
   height: 1em;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjIx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjIy {}
+.bd-spacer-22 {
+  height: 32px;
+  margin-bottom: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjIy {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjM {}
+.bd-spacer-3 {
+  height: 32px;
+  margin-bottom: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjM {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjM5 {}
 .bd-spacer-39 {
   height: 33px;
@@ -12803,6 +12963,8 @@ h2.bd-postheader-4 a {
   margin-left: auto;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHQ0MDQz {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhMg {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhMg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE {}
 .bd-textblock-1 {
   color: #ffffff;
@@ -12845,6 +13007,24 @@ h2.bd-textblock-107 {
   font-style: italic;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwOQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEx {}
+.bd-textblock-11 {
+  height: 116px;
+}
+@media (max-width: 991px) {
+  .bd-textblock-11 {
+    height: 166px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-textblock-11 {
+    height: 323px;
+  }
+}
+.bd-textblock-11 {
+  color: #858585;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazExMQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazExMQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEy {}
@@ -12878,11 +13058,12 @@ h1.bd-textblock-14 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5 {}
 .bd-textblock-19 {
-  margin-top: 17px;
+  margin-top: 0px;
 }
 h2.bd-textblock-19 {
   line-height: 42.85714287px;
   font-size: 30px;
+  color: #57d175;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI {}
@@ -12914,6 +13095,11 @@ h2.bd-textblock-19 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI1 {}
 .bd-textblock-25 {
   height: 64px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-25 {
+    height: 152px;
+  }
 }
 .bd-textblock-25 {
   color: #858585;
@@ -12948,9 +13134,15 @@ h2.bd-textblock-19 {
 .bd-textblock-31 {
   margin-top: 17px;
 }
+@media (max-width: 767px) {
+  .bd-textblock-31 {
+    height: 85px;
+  }
+}
 h2.bd-textblock-31 {
   line-height: 42.85714287px;
   font-size: 30px;
+  color: #57d175;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMy {}
@@ -12966,6 +13158,11 @@ h2.bd-textblock-31 {
 .bd-textblock-36 {
   height: 94px;
 }
+@media (max-width: 767px) {
+  .bd-textblock-36 {
+    height: 285px;
+  }
+}
 .bd-textblock-36 {
   color: #858585;
 }
@@ -12975,6 +13172,8 @@ h2.bd-textblock-31 {
   margin-bottom: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM3 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4 {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM5 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ {}
@@ -12989,6 +13188,7 @@ h2.bd-textblock-4 {
 h2.bd-textblock-40 {
   line-height: 42.85714287px;
   font-size: 30px;
+  color: #57d175;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQx {}
@@ -12996,11 +13196,32 @@ h2.bd-textblock-40 {
   margin-bottom: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQy {}
+.bd-textblock-42 {
+  margin-bottom: 12px;
+  height: 76px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-42 {
+    height: 129px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQz {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ0 {}
 .bd-textblock-44 {
   height: 107px;
+}
+@media (max-width: 991px) {
+  .bd-textblock-44 {
+    height: 146px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-textblock-44 {
+    height: 304px;
+  }
 }
 .bd-textblock-44 {
   color: #858585;
@@ -13011,20 +13232,18 @@ h2.bd-textblock-40 {
   margin-bottom: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ1 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ2 {}
+.bd-textblock-46 {
+  height: 58px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-46 {
+    height: 102px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ2 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ3 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ3 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ4 {}
-.bd-textblock-48 {
-  margin-bottom: 89px;
-  margin-top: 0px;
-}
-h1.bd-textblock-48 {
-  line-height: 51.42857144px;
-  font-size: 36px;
-  text-align: center;
-  color: #858585;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ5 {}
 .bd-textblock-49 {
   margin-bottom: 0px;
@@ -13032,11 +13251,6 @@ h1.bd-textblock-48 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUx {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUx {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUy {}
-.bd-textblock-52 {
-  margin-top: 19px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUz {}
 .bd-textblock-53 {
   margin-bottom: 17px;
@@ -13134,6 +13348,16 @@ h1.bd-textblock-60 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY5 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc {}
+.bd-textblock-7 {
+  margin-top: 17px;
+}
+h2.bd-textblock-7 {
+  line-height: 42.85714287px;
+  font-size: 30px;
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazcw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazcw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazcz {}
